--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ h3{
     </div>
     
     <div class="para">
-      Hey ! I am Meghana Rao a sophomore studying EEE in Manipal Institute of technology .Here is a small insights about my interests and  few experiences. 
+      Hey ! I am Meghana Rao a sophomore studying EEE in Manipal Institute of technology .Here is a small insights about my interests and  few experiences.Looking forward  for  maximizing experiences and adventures :)
     </div>
 </div>
  </div> 
